# azure-blob-downloader

./: Cargo.toml  readme.md
src/: main.rs
