[package]
name = "azure_blob_download"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.6.0"
url = "2.5.2"
